fixed problem with namefield being too short on kernels in thumbnails. Closes #310

--- a/trunk/Notewise/root/style.css
+++ b/trunk/Notewise/root/style.css
@@ -700,7 +700,7 @@ img {
     font-size: 9px;
     top: 0px;
     left: 14px;
-    height: 10px;
+    height: 14px;
     padding: 0px;
 }
 
